# infrastructure

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .sops.yaml  .yamllint.yaml  LICENSE  README.md  Taskfile.yaml  ansible.cfg  pyproject.toml  requirements.yaml
.taskfiles/: AnsibleTasks.yaml  BootstrapTasks.yaml  PrecommitTasks.yaml  SopsTasks.yaml
bootstrap/: main.yaml
bootstrap/tasks/validation/: age.yaml  cli.yaml  main.yaml  vars.yaml
provision/ansible/inventory/: hosts.yaml
provision/ansible/inventory/host_vars/billow/: ansible.sops.yaml  system.sops.yaml
provision/ansible/inventory/host_vars/openwrt-guest/: ansible.sops.yaml  system.sops.yaml
provision/ansible/playbooks/docker/: main.yaml
provision/ansible/playbooks/system/: debian.yaml
provision/ansible/roles/debian/defaults/: main.yaml
provision/ansible/roles/debian/tasks/: hostname.yaml  machine-id.yaml  openssh.yaml  package.yaml  reboot.yaml  time-syncd.yaml  timezone.yaml
provision/ansible/roles/dockerapp/defaults/: main.yaml
provision/ansible/roles/dockerapp/tasks/: adguardhome.yaml  bitwarden.yaml  main.yaml  traefik.yaml
provision/ansible/roles/dockerapp/templates/traefik/: config.yaml.j2
secrets/: bootstrap.sample.yaml  bootstrap.sops.yaml
