[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "🔧 Infrastructure management"
authors = ["Zircon Xi <hey@zirconxi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^9.1.0"
ansible-lint = { version = "^6.22.1", markers = 'platform_system != "Windows"' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
